Use `Integer.valueOf` instead of `new Integer` for battery stats.